RemoteMacViews: Close window on process exit

Process death should be treated as window exit. Tested using a process
kill.

Bug: 898627
Change-Id: I4e659dfeb71541ac2e111979842eda40110d7a66
Reviewed-on: https://chromium-review.googlesource.com/c/1298297
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602473}
Former-commit-id: a2603add1b1ef13d18c2b498a0d80aafdc5f4170